# mcp-factory

./: .gitignore  GUIDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
mcp_factory/: __init__.py
mcp_factory/cli/: __init__.py  main.py
mcp_factory/config/: __init__.py
mcp_factory/generator/: __init__.py  api_registry.py  api_tools.py  docker.py  engine.py
mcp_factory/llm/: __init__.py  client.py  interactive.py  prompts.py  reviewer.py
mcp_factory/storage/: __init__.py  db.py
mcp_factory/templates/: MCP_BEST_PRACTICES.md  __init__.py
mcp_factory/validator/: __init__.py  checker.py
tests/: test_generator.py  test_web.py
web/: __init__.py  app.py
web/static/: style.css
web/templates/: apis.html  base.html  config.html  create.html  dashboard.html  detail.html
web/templates/partials/: config_list.html  config_status.html  create_error.html  create_success.html  server_list.html
