[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt2mcp"
version = "0.3.1"
description = "Build MCP servers from natural language prompts — local-first, privacy-focused"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jatin" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "code-generation",
    "cli",
    "llm",
    "ai",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "ollama>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.urls]
Homepage = "https://github.com/JatinTaori1904/mcp-factory"
Repository = "https://github.com/JatinTaori1904/mcp-factory"
Issues = "https://github.com/JatinTaori1904/mcp-factory/issues"
Documentation = "https://github.com/JatinTaori1904/mcp-factory#readme"

[project.scripts]
mcpfactory = "mcp_factory.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["mcp_factory", "web"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
